Fixing issue where content from scrollbar will be on top of the menu

--- a/src/app/firstArticle/firstArticle.component.css
+++ b/src/app/firstArticle/firstArticle.component.css
@@ -1,14 +1,8 @@
+/* Make it scrollbar when content is bigger the the defined height */
 .pdfContainer {
-    height: 100%;
+    height: 500px;
     overflow-y: auto;
 }
-
-/* Style to give space between previous and next buttons
-.box{
-    box-sizing: border-box;
-    border: 3px solid transparent;
-    background-clip:padding-box;
-} */
 
 .metaDataDiv {
     background-color: green;
@@ -28,3 +22,4 @@
     align-items: center;
     justify-content: center;
 }
+
